# simon-game

./: .gitignore  .gitmodules
firmware/: CMakeLists.txt
firmware/cmake/: armgcc.cmake  flags.cmake  segger_rtt.cmake
firmware/scripts/: monitor_rtt.sh
firmware/simon-game/: simon-game.ino
firmware/src/: CMakeLists.txt  button.h  game.c  game.h  main.c  stm32g0xx_hal_conf.h  stm32g0xx_hal_msp.c  stm32g0xx_it.c
firmware/src/board/: STM32G030F6Px_FLASH.ld  bsp.c  bsp.h  bsp_pins.h
hardware/: fp-info-cache  simon-game-cache.lib  simon-game.kicad_pcb  simon-game.net  simon-game.pro  simon-game.sch  sym-lib-table
